--- a/User/GameSettings/GP6E01.ini
+++ b/User/GameSettings/GP6E01.ini
@@ -32,6 +32,29 @@ $RECOMMENDED: Increased Taunting Capabilities [gamemasterplc]
 0420516C 60000000
 $RECOMMENDED: Instant Text Display [gamemasterplc]
 0404F51C 38000000
+$RECOMMENDED: Increased Coin Gain/Loss Speed [gamemasterplc]
+0417e908 60000000
+0415f198 60000000
+0415f1a0 60000000
+*
+$RECOMMENDED: Display Player Number of Who Paused [gamemasterplc]
+C20456D4 00000002
+807F0050 906D0000
+38600000 00000000
+C203E1FC 0000000C
+3860012C 3880000A
+38A0002D 38C00028
+38E000FF 90ED0004
+38ED0004 3D008000
+6108C4B0 7D0903A6
+4E800421 3860012C
+3880000A 3CA08023
+38A5ABEF 80CD0000
+38C60001 C0228350
+3CE08000 60E7C354
+7CE903A6 4E800421
+57A0083C 00000000
+*
 $MPIQ MODE: Battle Coins Do Not Affect Mini-Game Star [gamemasterplc]
 204CDDC8 B003001E
 044CDDC4 60000000
@@ -43,50 +66,128 @@ E2000001 80008000
 28265BA8 0000003D
 02265BA8 0000003B
 E2000001 80008000
-$Increased Coin Gain/Loss Speed [gamemasterplc]
-0417E908 60000000
-0415F198 60000000
-0415F1A0 60000000
-$Sluggish Shroom Rolls 1-5 [gamemasterplc]
-04186608 38000005
-04186B80 4BFFFFF8
-$Crate and Peril: Ability to Jump [gamemasterplc]
-0408074C 60FB0003
-$Mass Meteor: Ties are Always Ties [gamemasterplc]
-204CF648 4082005C
-044CF648 4800005C
+*
+$MG: Mole it All: All Moles Worth 3 Points [gamemasterplc]
+204D57F0 A8A10008
+044D57F0 38A00003
 E2000001 80008000
-$Trap Ease Artist: All Goombas Worth 1 Point [gamemasterplc]
-204D3128 38000003
-044D3128 38000001
+*
+$MG: Dizzy Rotisserie: Lower Starting Time [gamemasterplc]
+204F3F84 38800708
+044F3F84 388004B0
 E2000001 80008000
-$Treasure Trawlers: All Scavenged Items are Regular Chests [gamemasterplc]
-20501374 E3E100A8
-C24FC478 00000003
-2C030000 40810008
-38600000 7C7C1B78
+*
+$MG: Sink or Swin: Infinite Air [gamemasterplc]
+204CF1A4 3803FFFF
+044CF1A4 38000258
+E2000001 80008000
+*
+$MG: Crate and Peril: Ability to Jump [gamemasterplc]
+0408074c 60fb0003
+*
+$MG: Mass Meteor: Ties are Always Ties [gamemasterplc]
+204cf648 4082005c
+044cf648 4800005c
+e2000001 80008000
+*
+$MG: Trap Ease Artist: All Goombas Worth 1 Point [gamemasterplc]
+204d3128 38000003
+044d3128 38000001
+e2000001 80008000
+*
+$MG: Treasure Trawlers: All Scavenged Items are Regular Chests [gamemasterplc]
+20501374 e3e100a8
+c24fc478 00000003
+2c030000 40810008
+38600000 7c7c1b78
 60000000 00000000
-E2000001 80008000
-$Replace Odd Card Out -> What Goes Up... [gamemasterplc]
-28265BA8 00000001
-02265BA8 00000003
-E2000001 80008000
-$Replace Dizzy Rotisserie -> Dark 'n' Crispy [gamemasterplc]
-28265BA8 00000047
-02265BA8 00000048
-E2000001 80008000
-$Random Music
+e2000001 80008000
+*
+$MGR: Replace Odd Card Out -> What Goes Up... [gamemasterplc]
+28265ba8 00000001
+02265ba8 00000003
+e2000001 80008000
+*
+$MGR: Replace Dizzy Rotisserie -> Dark 'n' Crispy [gamemasterplc]
+28265ba8 00000047
+02265ba8 00000048
+e2000001 80008000
+*
+$Mechanics: Random Music
 C214427C 00000004
 7C7D1B78 3860006E
 3C808003 6084FCD4
 7C8903A6 4E800421
 7C7D1B78 00000000
+*
+$Mechanics: Sluggish Shroom Rolls 1-5 [gamemasterplc]
+04186608 38000005
+04186b80 4bfffff8
+*
+$Mechanics: Free Stars [gamemasterplc]
+0418333C 2C030000
+0418342C 2C030000
+041834C4 2C030000
+C2183590 00000002
+38800000 7C8400D0
+60000000 00000000
+0415F668 2C030000
+0415FA18 38800000
+204DAC30 7C641B78
+044DAC30 388000FF
+044DB9DC 38800000
+E2000001 80008000
+*
+$Board: Snowflake Lake: Chomp Stations Sell Stars (40 Coins) [Celery]
+0418040c 480000f0
+204cadfc 48001595
+48000000 802c0364
+de000000 80008180
+14014f64 7834300a
+e2000001 80008000
+204cadfc 48001595
+c24cc390 00000021
+9421ffe0 7c0802a6
+90010024 93e10008
+93c1000c 93a10018
+7c7f1b78 3fc08015
+63decd40 7fc903a6
+4e800421 2c030028
+418000b4 1c7f0108
+3c808026 7c632214
+88635750 70630020
+40820050 38600001
+3c800027 38840003
+38a00006 38c00000
+3fc08016 63debce8
+7fc903a6 4e800421
+3fc08016 63decda8
+7fc903a6 4e800421
+3fc08016 63decafc
+7fc903a6 4e800421
+2c030000 40820050
+7fe3fb78 3880ffd8
+3fc08017 63dee824
+7fc903a6 4e800421
+7fe3fb78 38800000
+38a00001 38c00001
+3fc08017 63defef0
+7fc903a6 4e800421
+38600014 3fc08016
+63deec68 7fc903a6
+4e800421 83a10018
+83c1000c 83e10008
+80010024 7c0803a6
+38210020 4e800020
+60000000 00000000
+044cb09c 480000a0
+e2000001 80008000
+*
 [Gecko_Enabled]
 $RECOMMENDED: Increased Board Speed
 $RECOMMENDED: Increased NPC Speed
 $RECOMMENDED: Increased Orb Throwing Speed
 $RECOMMENDED: Increased Taunting Capabilities
 $RECOMMENDED: Instant Text Display
-$Increased Coin Gain/Loss Speed
-[Controls]
-PadType0 = GC
+$RECOMMENDED: Increased Coin Gain/Loss Speed
+$RECOMMENDED: Display Player Number of Who Paused
