--- a/User/GameSettings/GP5E01.ini
+++ b/User/GameSettings/GP5E01.ini
@@ -23,6 +23,24 @@ $RECOMMENDED: Increased Taunt Capabilities [gamemasterplc]
 04132180 60000000
 $RECOMMENDED: Instant Text Display [gamemasterplc]
 0404A560 38000000
+$RECOMMENDED: Display Player Number of Who Paused [gamemasterplc]
+C2040178 00000002
+807F0050 906D0000
+38600000 00000000
+C20396A8 0000000C
+3860012C 3880000A
+38A00036 38C00030
+38E000FF 90ED0004
+38ED0004 3D008000
+6108B5C4 7D0903A6
+4E800421 3860012C
+3880000A 3CA0801C
+38A5AED0 80CD0000
+38C60001 C022831C
+3CE08000 60E7B468
+7CE903A6 4E800421
+57A0083C 00000000
+*
 $MPIQ MODE: Battle Coins Do Not Affect Mini-Game Star [gamemasterplc]
 2046D354 B0030022
 0446D350 60000000
@@ -46,26 +64,65 @@ E2000001 80008000
 2822A4C4 0000003C
 0222A4C4 0000003A
 E2000001 80008000
-$Use Capsules On Yourself For Free [gamemasterplc]
-040C9BA8 38A00000
-040C56DC 38600000
-040C5B44 38600000
-040C2708 38600000
-$Bound of Music: No Bricks [gamemasterplc]
-2046E0A8 7C033000
-0446E0AC 60000000
+$Mechanics: Use Capsules On Yourself For Free [gamemasterplc]
+040c9ba8 38a00000
+040c56dc 38600000
+040c5b44 38600000
+040c2708 38600000
+*
+$Mechanics: Free Stars [gamemasterplc]
+F6000001 80008180
+4080002C 386002F0
+14000000 4800002C
+140000EC 2C030000
+14000128 2C030000
+140001E8 38800000
+E0000000 80008000
+F6000001 80008180
+2C030014 40800070
+14000000 2C030000
+14000618 38800000
+E0000000 80008000
+*
+$Board: Sweet Dream: Disable Top Most Happenning Space [gamemasterplc]
+2045B2F4 F3E10148
+0445B2E4 4E800020
 E2000001 80008000
-$Pop Star Piranhas: Halved Time to Pick [gamemasterplc]
-2046983C 3880012C
-0446983C 38800096
+*
+$MG: Bound of Music: No Bricks [gamemasterplc]
+2046e0a8 7c033000
+0446e0ac 60000000
+e2000001 80008000
+*
+$MG: Pop Star Piranhas: Halved Time to Pick [gamemasterplc]
+2046983c 3880012c
+0446983c 38800096
+e2000001 80008000
+*
+$MG: Ground Pound Down: No Rocks Until End [gamemasterplc]
+2046FCC4 4180FF6C
+0446FCC4 60000000
 E2000001 80008000
+*
+$MG: Coney Island: Start With 60 Seconds [gamemasterplc]
+2046EA6C 38800708
+0446EA6C 38800710
+E2000001 80008000
+*
+$MG: Coney Island: Bigger Cones Don't Slow You Down [gamemasterplc]
+204763E4 3C608048
+044763E0 38000000
+0447663C 38000000
+E2000001 80008000
+*
+$MG: Flower Shower: All Flowers Worth 3 Points [gamemasterplc]
+20459BEC 801F003C
+04459BEC 38000003
+E2000001 80008000
+*
 [Gecko_Enabled]
 $RECOMMENDED: Increased Board Speed
 $RECOMMENDED: Increased Orb Throwing Speed
 $RECOMMENDED: Increased Taunt Capabilities
 $RECOMMENDED: Instant Text Display
-$MPIQ MODE: Battle Coins Do Not Affect Mini-Game Star
-$MPIQ MODE: Replace Pure Luck Mini-Games
-$Bound of Music: No Bricks
-[Controls]
-PadType0 = GC
+$RECOMMENDED: Display Player Number of Who Paused
