--- a/User/GameSettings/GP7E01.ini
+++ b/User/GameSettings/GP7E01.ini
@@ -23,71 +23,165 @@ $RECOMMENDED: Increased Taunt Capabilities [gamemasterplc]
 04235B90 60000000
 $RECOMMENDED: Instant Text Display [gamemasterplc]
 04050A70 38800000
-$MP7 20XX: Battle Coin Gain Doesn't Affect Mini-Game Star [gamemasterplc]
-204E628C 7C080734
-C24E6288 00000006
-3D008029 A9081558
-3CE08025 60E79DF0
-1D08007C 7CE83A14
-88E70002 2C070003
-40820008 38A00000
-7C051A14 00000000
-E2000001 80008000
-$MP7 20XX: DK and Bowser Give Only Multiplayer Games [gamemasterplc]
-041D19A0 3B600004
-041D5058 3B200005
-$MP7 20XX: Disable Bowser Time [gamemasterplc]
-0415208C 480000D0
-04233FC8 4E800020
-$MP7 20XX: Disable Character Orbs [gamemasterplc]
-042F12E8 00000000
-042F12A8 00000000
-042F12C8 00000000
-042F1308 00000000
-042F1328 00000000
-042F1348 00000000
-$MP7 20XX: Disable Mic Spaces [gamemasterplc]
-0417AFD0 60000000
-$MP7 20XX: Disable Shop Sales [gamemasterplc]
+$RECOMMENDED: Display Player Number of Who Paused [gamemasterplc]
+C2047400 00000002
+807F0050 906D0000
+38600000 00000000
+C20402FC 0000000C
+3860012C 3880000A
+38A0002D 38C00028
+38E000FF 90ED0004
+38ED0004 3D008000
+6108CA28 7D0903A6
+4E800421 3860012C
+3880000A 3CA08025
+38A548EF 80CD0000
+38C60001 C0228388
+3CE08000 60E7C8CC
+7CE903A6 4E800421
+57A0083C 00000000
+*
+$MPIQ MODE: Battle Coin Gain Doesn't Affect Mini-Game Star [gamemasterplc]
+204e628c 7c080734
+c24e6288 00000006
+3d008029 a9081558
+3ce08025 60e79df0
+1d08007c 7ce83a14
+88e70002 2c070003
+40820008 38a00000
+7c051a14 00000000
+e2000001 80008000
+*
+$MPIQ MODE: DK and Bowser Give Only Multiplayer Games [gamemasterplc]
+041d19a0 3b600004
+041d5058 3b200005
+*
+$Mechanics: Disable Bowser Time [gamemasterplc]
+0415208c 480000d0
+04233fc8 4e800020
+*
+$Mechanics: Disable Character Orbs [gamemasterplc]
+042f12e8 00000000
+042f12a8 00000000
+042f12c8 00000000
+042f1308 00000000
+042f1328 00000000
+042f1348 00000000
+*
+$Mechanics: Disable Mic Spaces [gamemasterplc]
+0417afd0 60000000
+*
+$Mechanics: Disable Shop Sales [gamemasterplc]
 04216780 48000070
-041EA948 3BC00000
-$MP7 20XX: Force Mini-Game/Orb/Happening Bonus Stars [gamemasterplc]
-204E4AE0 48000210
-044E4A38 48000014
-044E4A6C 38000000
-E2000001 80008000
-$MP7 20XX: Replace "Nothing" Duel Result With "Half Coins" [gamemasterplc]
-C21D8ED0 00000003
-2C030003 40820008
-38600001 7C711B78
+041ea948 3bc00000
+*
+$Mechanics: Force Mini-Game/Orb/Happening Bonus Stars [gamemasterplc]
+204e4ae0 48000210
+044e4a38 48000014
+044e4a6c 38000000
+e2000001 80008000
+*
+$Mechanics: Replace "Nothing" Duel Result With "Half Coins" [gamemasterplc]
+c21d8ed0 00000003
+2c030003 40820008
+38600001 7c711b78
 60000000 00000000
-$MP7 20XX: Sluggish Shroom Rolls 1-5 [gamemasterplc]
-0418CCC8 38000005
-0418D1AC 40820020
-$Microphone Always Off [gamemasterplc]
-04098FC4 3800002C
-04098FC8 980317E6
-04098FCC 38600000
-$Neon Heights: Balance Changes [gamemasterplc]
-204E0F0C 7C9E2378
-044E0BAC 38A00014
-044E08D8 38000014
-044E06C4 38000014
-044E1008 48001451
-044E1020 4BFFFFD0
-044E2564 3B200014
-044E269C 3B000014
-E2000001 80008000
-*Chests now cost 20 Coins, and Bob-omb/Nothing Chests now contain 20 Coins.
-$Can Hold Up To 5 Orbs [Ralf]
-041675B8 38600005
-04167604 3BA00005
+*
+$Mechanics: Sluggish Shroom Rolls 1-5 [gamemasterplc]
+0418ccc8 38000005
+0418d1ac 40820020
+*
+$Mechanics: Microphone Always Off [gamemasterplc]
+04098fc4 3800002c
+04098fc8 980317e6
+04098fcc 38600000
+*
+$Mechanics: Koopa Kid Orbs Can Be Purchased [Ralf]
+0419EB0C 48000024
+04274ADC 00000001
+06004860 0000002C
+88030000 28000028
+4082001C 3C80802E
+6084F598 38A00010
+4BFFECC9 38000028
+98030000 3B9C0001
+481E5098 00000000
+041E991C 4BE1AF44
+*
+$Mechanics: Can Use All Blue Orbs [Ralf]
+041EE17C 38600000
+041EE23C 48000014
+041F5F98 8803001B
+041F5F9C 2C00001F
+041F5FA4 60000000
+041F5FA8 2C000020
+041F5FB0 4800004C
+041F60C4 8803001B
+041F60C8 2C00001F
+041F60D0 60000000
+041F60D4 2C000020
+041F60DC 48000064
+041F6230 8803001B
+041F6234 2C00001F
+041F623C 60000000
+041F6240 2C000020
+041F6248 48000050
+*
+$Mechanics: Mic Minigames are 10% instead of 20%. [gamemasterplc]
+042F7A04 41200000
+*
+$Mechanics: Can Hold Up To 5 Orbs [Ralf]
+041675b8 38600005
+04167604 3ba00005
 04167730 38800005
-041678E0 38E00005
-041679BC 3BE00005
-04167B80 38E00005
-04167CA8 39600005
-041935FC 48000034
+041678e0 38e00005
+041679bc 3be00005
+04167b80 38e00005
+04167ca8 39600005
+041935fc 48000034
+*
+$Mechanics: Free Stars [gamemasterplc]
+04188774 3B800000
+0418876C 3B800000
+204ED598 40800030
+044ED598 48000030
+044ED754 38800000
+E2000001 80008000
+204F62C0 38030001
+044F62C4 38000000
+044F690C 38600000
+E2000001 80008000
+*
+$Board: Neon Heights: Balance Changes [gamemasterplc]
+204e0f0c 7c9e2378
+044e0bac 38a00014
+044e08d8 38000014
+044e06c4 38000014
+044e1008 48001451
+044e1020 4bffffd0
+044e2564 3b200014
+044e269c 3b000014
+e2000001 80008000
+*Chests now cost 20 Coins, and Bob-omb/Nothing Chests now contain 20 Coins.
+$Board: Pagoda Peak: Bottle Rocket Launch Always Succeds Pagoda Peak [gamemasterplc]
+204DF8A0 2803004B
+044DF8A4 60000000
+E2000001 80008000
+*
+$Board: Windmillville: Free Flower Glider [gamemasterplc]
+204E1F00 7C600734
+044E1EFC 386003E7
+044E7D10 38A00000
+E2000001 80008000
+*
+$Board: Pyramid Park: Free Chomp Rides [gamemasterplc]
+204E10B4 7C03D000
+044E10B0 386003E7
+044E1114 386003E7
+044E14EC 386003E7
+044E17A4 38A00000
+E2000001 80008000
+*
 $Can Set P1 to CPU (Mario Retardy)
 0422D898 60000000
 04053A50 60000000
@@ -97,3 +191,4 @@ $RECOMMENDED: Increased Board Speed (Chain Chomp)
 $RECOMMENDED: Increased Orb Throwing Speed
 $RECOMMENDED: Increased Taunt Capabilities
 $RECOMMENDED: Instant Text Display
+$RECOMMENDED: Display Player Number of Who Paused
