Mario Party 4 Cheat Cleanup

--- a/User/GameSettings/GMPE01.ini
+++ b/User/GameSettings/GMPE01.ini
@@ -48,44 +48,47 @@ $RECOMMENDED: Speed Up Many Animations [gamemasterplc]
 040786A0 C02281F0
 0406E314 C02281F0
 *
-$MPIQ MODE: Boo's Haunted Bash: Faster Mystery Train
-20432574 2C1C002D
-04432570 3B9C0002
-E2000001 80008000
+$Board: Boo's Haunted Bash: Faster Mystery Train
+20432574 2c1c002d
+04432570 3b9c0002
+e2000001 80008000
 *
-$MPIQ MODE: Boo's Haunted Bash: Red Boo Always On [gamemasterplc]
-0018FD08 00000000
 *
-$MPIQ MODE: Mini Pipes Work at Normal Size [gamemasterplc]
-04066348 60000000
-04064ED0 60000000
-04065114 60000000
+$Board: Boo's Haunted Bash: Red Boo Always On [gamemasterplc]
+0018fd08 00000000
 *
-$MPIQ MODE: Goomba's Greedy Gala: Free Roulette
+*
+*
+$Board: Goomba's Greedy Gala: Free Roulette
 2043b934 2c1f0005
 0443b92c 386003e7
 0443bb08 38800000
 e2000001 80008000
 *
-$MPIQ MODE: Goomba's Greedy Gala: Always Win Dice Game [gamemasterplc]
-20432D5C 3860000A
-04432D60 38600009
-E2000001 80008000
-*Might make the game very slow, but it is still possible
-$MPIQ MODE: Bowser's Gnarly Party: Bridges Fall After One Cross [gamemasterplc]
-2043801C 4182004C
-04438294 38000002
-E2000001 80008000
 *
-$MPIQ MODE: Koopa's Seaside Soiree: Banana Peel is a Normal Junction [gamemasterplc]
+$Board: Always Win Dice Game [gamemasterplc]
+20432d5c 3860000a
+04432d60 38600009
+e2000001 80008000
+*Might make the game very slow, but it is still possible
+*
+$Board: Bowser's Gnarly Party: Bridges Fall After One Cross [gamemasterplc]
+2043801c 4182004c
+04438294 38000002
+e2000001 80008000
+*
+*
+$Board: Koopa's Seaside Soiree: Banana Peel is a Normal Junction [gamemasterplc]
 2043030c 48000088
 044326fc 4e800020
 e2000001 80008000
 *
-$MPIQ MODE: Toad's Midway Madness: Teacups are Normal Junctions
+*
+$Board: Toad's Midway Madness: Teacups are Normal Junctions
 20435308 80010008
-044352F4 4E800020
-E2000001 80008000
+044352f4 4e800020
+e2000001 80008000
+*
 *
 $Mechanics: Event Accessibility Doesn't Depend on Mini/Mega Status [gamemasterplc]
 04075ff0 38600000
@@ -123,17 +126,20 @@ $Mechanics: Mini Status Does Not Limit Roll [gamemasterplc]
 04085d74 3800000a
 *
 *
-$Mechanics: Free Stars [gamemasterplc]
-040843cc 2c030000
-04084590 2c030000
-040845cc 2c030000
-04084720 38800000
-*
-*
 $Mechanics: Free Lottery Game [gamemasterplc]
 0407b28c 38600005
 0407bd04 38800000
 *
+$Mechanics: Mini Pipes Work at Normal Size [gamemasterplc]
+04066348 60000000
+04064ed0 60000000
+04065114 60000000
+*
+$Bonus: Free Stars [gamemasterplc]
+040843cc 2c030000
+04084590 2c030000
+040845cc 2c030000
+04084720 38800000
 *
 [Gecko_Enabled]
 $RECOMMENDED: Allow Digital Presses for Map Screen
