--- a/User/Config/Dolphin.ini
+++ b/User/Config/Dolphin.ini
@@ -19,7 +19,7 @@ DebugModeEnabled = False
 [Display]
 FullscreenDisplayRes = Auto
 Fullscreen = False
-RenderToMain = False
+RenderToMain = True
 RenderWindowXPos = -1
 RenderWindowYPos = -1
 RenderWindowWidth = 640
@@ -49,8 +49,8 @@ ListWorld = True
 ListUnknown = True
 ListSort = 3
 ListSortSecondary = 0
-ColumnPlatform = True
-ColumnBanner = True
+ColumnPlatform = False
+ColumnBanner = False
 ColumnDescription = False
 ColumnTitle = True
 ColumnNotes = True
@@ -107,7 +107,7 @@ RunCompareClient = False
 EmulationSpeed = 1.00000000
 Overclock = 1.00000000
 OverclockEnable = False
-GFXBackend = 
+GFXBackend = OGL
 GPUDeterminismMode = auto
 PerfMapDir = 
 EnableCustomRTC = False
@@ -165,4 +165,13 @@ JitPairedOff = False
 JitSystemRegistersOff = False
 JitBranchOff = False
 [NetPlay]
-TraversalChoice = direct
+TraversalChoice = traversal
+ChunkedUploadLimit = 0x00000bb8
+ConnectPort = 0x0a42
+EnableChunkedUploadLimit = False
+HostCode = 00000000
+HostPort = 0x0a42
+Nickname = Player
+TraversalPort = 0x1876
+TraversalServer = stun.dolphin-emu.org
+UseUPNP = False
