--- a/User/Config/GCPadNew.ini
+++ b/User/Config/GCPadNew.ini
@@ -1,5 +1,5 @@
 [GCPad1]
-Device = XInput/1/Gamepad
+Device = XInput/0/Gamepad
 Buttons/A = `Button A`
 Buttons/B = `Button B`
 Buttons/X = `Button X`
@@ -24,5 +24,5 @@ D-Pad/Up = `Pad N`
 D-Pad/Down = `Pad S`
 D-Pad/Left = `Pad W`
 D-Pad/Right = `Pad E`
-Triggers/L-Analog = `Thumb L`
-Triggers/R-Analog = `Thumb R`
+Triggers/L-Analog = `Trigger L`
+Triggers/R-Analog = `Trigger R`
