--- a/User/GameSettings/GP6E01.ini
+++ b/User/GameSettings/GP6E01.ini
@@ -42,6 +42,57 @@ $Recommended: Increased Coin Gain/Loss Speed [gamemasterplc]
 0415f198 60000000
 0415f1a0 60000000
 *
+$Recommended: Show Player Number of Who Paused [gamemasterplc]
+C20456D4 00000002
+807F0050 906D0000
+38600000 00000000
+C203E1FC 0000000C
+3860012C 3880000A
+38A0002D 38C00028
+38E000FF 90ED0004
+38ED0004 3D008000
+6108C4B0 7D0903A6
+4E800421 3860012C
+3880000A 3CA08023
+38A5ABEF 80CD0000
+38C60001 C0228350
+3CE08000 60E7C354
+7CE903A6 4E800421
+57A0083C 00000000
+*
+$Important!!!: Disable Music
+042C02A4 00000001
+*
+$Important!!!: Widescreen
+040183EC 38600001
+C20A17B0 00000002
+C0A29F48 EFA22824
+60000000 00000000
+C20A152C 00000002
+C0029F48 EF620024
+60000000 00000000
+042C30F8 3FCCCCCD
+C202C18C 00000002
+C01F000C C3A29F48
+EC00E824 00000000
+0414E760 C3A30000
+041932E0 388002D0
+042C14B8 3FCCCCCD
+04151324 38600001
+*
+$Bonus: Free Stars
+0418333C 2C030000
+0418342C 2C030000
+041834C4 2C030000
+C2183590 00000002
+38800000 7C8400D0
+60000000 00000000
+0415F668 2C030000
+0415FA18 38800000
+204DAC30 7C641B78
+044DAC30 388000FF
+044DB9DC 38800000
+E2000001 80008000
 *
 $Mechanics: Battle Coins Do Not Affect Mini-Game Star [gamemasterplc]
 204cddc8 b003001e
@@ -122,3 +173,5 @@ $Recommended: Increased Orb Throwing Speed
 $Recommended: Increased Taunting Capabilities
 $Recommended: Instant Text Display
 $Recommended: Increased Coin Gain/Loss Speed
+$Recommended: Show Player Number of Who Paused
+$Recommended: Widescreen
