--- a/User/GameSettings/GP7E01.ini
+++ b/User/GameSettings/GP7E01.ini
@@ -24,9 +24,168 @@ $Recommended: Increased Taunt Capabilities [gamemasterplc]
 *
 $Recommended: Instant Text Display [gamemasterplc]
 04050A70 38800000
-$!!!!!: Set this cheat to force Player 1 to CPU (Mario Retardy)
+*
+$Recommended: Show Player Number of Who Paused in Minigames
+C2047400 00000002
+807F0050 906D0000
+38600000 00000000
+C20402FC 0000000C
+3860012C 3880000A
+38A0002D 38C00028
+38E000FF 90ED0004
+38ED0004 3D008000
+6108CA28 7D0903A6
+4E800421 3860012C
+3880000A 3CA08025
+38A548EF 80CD0000
+38C60001 C0228388
+3CE08000 60E7C8CC
+7CE903A6 4E800421
+57A0083C 00000000
+*
+$Important!!!: Disable Bowser Time [gamemasterplc]
+C2152080 00000002
+38000000 9803000C
+60000000 00000000
+*Turning this on can save 5-20 minutes of Board Events.
+*
+$Important!!!: No Music
+0414AAF0 4E800020
+*
+$Important!!!: Set this cheat to force Player 1 to CPU (Mario Retardy)
 0422d898 60000000
 04053a50 60000000
+*
+$Important!!!: Widescreen [gamemasterplc]
+200018A8 9421FF58
+C60A07E0 800018A8
+E2000001 80008000
+200010A8 9421FF58
+C60A07E0 800010A8
+E2000001 80008000
+041555C4 C3A30000
+041794DC 60000000
+040189C4 38600001
+C20A7948 00000003
+93E10024 3FE03FAB
+93E30000 C0A30000
+EFA50772 00000000
+C20A76C0 00000003
+3FE03FAB 93E30000
+C0030000 EF6000B2
+60000000 00000000
+042F3E30 44555555
+042F3ED0 44400000
+0404EF48 C0828110
+04177F94 C0828110
+C20BD108 00000004
+A8830000 2C043B2A
+4082000C 3C80BF40
+9083000C C003000C
+60000000 00000000
+204DFA10 38800100
+C24DF9F8 00000006
+3C803FAB 9081FFFC
+C021FFFC C04280C0
+3C808001 608409A0
+7C8903A6 4E800421
+3C804295 9081FFFC
+C021FFFC 00000000
+E2000001 80008000
+204E5ABC 3800FFFF
+C24E5A9C 00000002
+3C803F2B 9081FFFC
+C021FFFC 00000000
+044E7318 C1955555
+E2000001 80008000
+204DF4D8 38040040
+C24DF4B0 00000005
+EC200828 3CA03FAB
+90A100B4 C04100B4
+EC220072 3CA0C2C0
+90A100B4 C04100B4
+EC22082A 00000000
+C24DF510 00000002
+3C803F99 9081FFFC
+C021FFFC 00000000
+E2000001 80008000
+204E7360 43300000
+C24DE590 00000006
+3C803FAB 9081FFFC
+C021FFFC C04280C0
+3C808001 608409A0
+7C8903A6 4E800421
+3C80C2D0 9081FFFC
+C021FFFC 00000000
+044E735C C1180000
+C24E1F20 00000003
+3C60C2C0 9061000C
+C021000C EC3D082A
+D3A10008 00000000
+044E73F0 41000000
+C24E1E0C 00000003
+3C60C2C0 9061000C
+C021000C EC3F082A
+D3E10008 00000000
+E2000001 80008000
+C204DFFC 00000008
+3C80804D 6084E634
+80A10064 7C042800
+40820024 3C803FAB
+9081FFFC C021FFFC
+C04280C0 3C808001
+608409A0 7C8903A6
+4E800421 C03F0078
+60000000 00000000
+0401187C 60000000
+C21949C0 00000005
+C03F0014 3C803FAB
+9081FFFC C041FFFC
+EC220072 3C80C2C0
+9081FFFC C041FFFC
+EC22082A 00000000
+C21937C8 00000005
+C0210008 3C803FAB
+9081FFFC C041FFFC
+EC220072 3C80C2C0
+9081FFFC C041FFFC
+EC22082A 00000000
+C2194320 00000005
+C03F0014 3C803FAB
+9081FFFC C041FFFC
+EC220072 3C80C2C0
+9081FFFC C041FFFC
+EC22082A 00000000
+204EA934 FC20F890
+C24EA924 00000005
+C3FF0004 3C803FAB
+9081FFFC C041FFFC
+EFE207F2 3C80C2C0
+9081FFFC C041FFFC
+EFE2F82A 00000000
+C24EAB40 00000005
+C03F0010 3C803FAB
+9081FFFC C041FFFC
+EC220072 3C80C2C0
+9081FFFC C041FFFC
+EC22082A 00000000
+E2000001 80008000
+C2046A88 00000005
+C03F0008 3C803FAB
+9081FFFC C041FFFC
+EC220072 3C80C2C0
+9081FFFC C041FFFC
+EC22082A 00000000
+C216E5F4 00000005
+C0210008 3C603FAB
+9061001C C041001C
+EC220072 3C60C2C0
+9061001C C041001C
+EC22082A 00000000
+C22179E4 00000003
+808100DC 1C840004
+38A00003 7C842FD6
+3884FF96 00000000
 *
 $Board: Neon Heights: Balance Changes [gamemasterplc]
 204e0f0c 7c9e2378
@@ -39,9 +198,42 @@ $Board: Neon Heights: Balance Changes [gamemasterplc]
 044e269c 3b000014
 e2000001 80008000
 *Chests now cost 20 Coins, and Bob-omb/Nothing Chests now contain 20 Coins.
+*
+$Board: Neon Heights: Bowser Path for Free
+204FDEF4 2C03000A
+044FDEF4 2C030000
+044FDF5C 38A00000
+E2000001 80008000
+*
 $Board: Pagoda Peak: Bottle Rocket Launch Always Succeds Pagoda Peak [gamemasterplc]
 204DF8A0 2803004B
 044DF8A4 60000000
+E2000001 80008000
+*
+$Board: Pyramid Park: Free Chomp Rides [gamemasterplc]
+204E10B4 7C03D000
+044E10B0 386003E7
+044E1114 386003E7
+044E14EC 386003E7
+044E17A4 38A00000
+E2000001 80008000
+*
+$Board: Windmillville: Free Flower Glider [gamemasterplc]
+204E1F00 7C600734
+044E1EFC 386003E7
+044E7D10 38A00000
+E2000001 80008000
+*
+$Bonus: Free Stars [gamemasterplc]
+04188774 3B800000
+0418876C 3B800000
+204ED598 40800030
+044ED598 48000030
+044ED754 38800000
+E2000001 80008000
+204F62C0 38030001
+044F62C4 38000000
+044F690C 38600000
 E2000001 80008000
 *
 $Mechanics: Battle Coin Gain Doesnt Affect Mini-Game Star [gamemasterplc]
@@ -55,31 +247,12 @@ c24e6288 00000006
 7c051a14 00000000
 e2000001 80008000
 *
-$Mechanics: Can Use All Character Orbs [Ralf]
-041EE17C 38600000
-041EE23C 48000014
-041F5F98 8803001B
-041F5F9C 2C00001F
-041F5FA4 60000000
-041F5FA8 2C000020
-041F5FB0 4800004C
-041F60C4 8803001B
-041F60C8 2C00001F
-041F60D0 60000000
-041F60D4 2C000020
-041F60DC 48000064
-041F6230 8803001B
-041F6234 2C00001F
-041F623C 60000000
-041F6240 2C000020
-041F6248 48000050
+$Mechanics: Can Place Orbs on your Current Space [gamemasterplc]
+041E7128 60000000
+*
 $Mechanics: DK and Bowser Give Only Multiplayer Games [gamemasterplc]
 041d19a0 3b600004
 041d5058 3b200005
-*
-$Mechanics: Disable Bowser Time [gamemasterplc]
-0415208c 480000d0
-04233fc8 4e800020
 *
 $Mechanics: Disable Character Orbs [gamemasterplc]
 042f12e8 00000000
@@ -114,6 +287,10 @@ $Mechanics: Koopa Kid Orbs Can Be Purchased [Ralf]
 481E5098 00000000
 041E991C 4BE1AF44
 *
+$Mechanics: Hammer Bro Orb Steals 20 Coins [Ralf]
+041AE1E4 3AC00014
+041AEBE0 38A0FFEC
+*
 $Mechanics: Mic Minigames are 10% chance of appearance instead of 20%. [gamemasterplc]
 042F7A04 41200000
 *
@@ -121,6 +298,22 @@ $Mechanics: Microphone Always Off [gamemasterplc]
 04098fc4 3800002c
 04098fc8 980317e6
 04098fcc 38600000
+*
+$Mechanics: Replace Daisy with Koopa Kid
+057FAFE4 4BEBD7A8
+057FAFE8 001BB312
+057FAFF0 4C191720
+057FAFF4 00039C5A
+057FAFFC 4C1CB37C
+057FB000 0001D5AE
+057FB008 4C1E892C
+057FB00C 0001BCD2
+057FB014 4C204600
+057FB018 00012E20
+057FB020 4C217420
+057FB024 0000D456
+057FB02C 4C224878
+057FB030 00052266
 *
 $Mechanics: Replace "Nothing" Duel Result With "Half Coins" [gamemasterplc]
 c21d8ed0 00000003
@@ -138,4 +331,5 @@ $Recommended: Increased Board Speed (Chain Chomp)
 $Recommended: Increased Orb Throwing Speed
 $Recommended: Increased Taunt Capabilities
 $Recommended: Instant Text Display
-$Mechanics: Koopa Kid Orbs Can Be Purchased
+$Recommended: Show Player Number of Who Paused in Minigames
+$Recommended: Widescreen
