--- a/User/Config/Dolphin.ini
+++ b/User/Config/Dolphin.ini
@@ -105,8 +105,8 @@ WiimoteEnableSpeaker = False
 RunCompareServer = False
 RunCompareClient = False
 EmulationSpeed = 1.00000000
-Overclock = 1.00000000
-OverclockEnable = False
+Overclock = 0.846745372
+OverclockEnable = True
 GFXBackend = OGL
 GPUDeterminismMode = auto
 PerfMapDir = 
@@ -165,7 +165,7 @@ JitPairedOff = False
 JitSystemRegistersOff = False
 JitBranchOff = False
 [NetPlay]
-TraversalChoice = traversal
+TraversalChoice = direct
 ChunkedUploadLimit = 0x00000bb8
 ConnectPort = 0x0a42
 EnableChunkedUploadLimit = False
@@ -175,3 +175,4 @@ Nickname = Player
 TraversalPort = 0x1876
 TraversalServer = stun.dolphin-emu.org
 UseUPNP = False
+Address = 127.0.0.1
