--- a/User/GameSettings/GP5E01.ini
+++ b/User/GameSettings/GP5E01.ini
@@ -48,11 +48,12 @@ C20396A8 0000000C
 7CE903A6 4E800421
 57A0083C 00000000
 *
-$Important!!!: Disable Music
-042888A4 00000001
-20468E38 80630000
-04468E3C 38600000
-E2000001 80008000
+$Important!!!: No Music
+042888a4 00000001
+20468e38 80630000
+04468e3c 38600000
+e2000001 80008000
+*
 *
 $Important!!!: Widescreen
 04289518 44400000
@@ -421,5 +422,3 @@ $Recommended: Increased Taunt Capabilities
 $Recommended: Instant Text Display
 $Recommended: Increased Walking Speed
 $Recommended: Show Player Number of Who Paused
-$Recommended: Widescreen
-$IMPORTANT!!!: Disable Music
