--- a/User/GameSettings/GP6E01.ini
+++ b/User/GameSettings/GP6E01.ini
@@ -60,8 +60,9 @@ C203E1FC 0000000C
 7CE903A6 4E800421
 57A0083C 00000000
 *
-$Important!!!: Disable Music
-042C02A4 00000001
+$Important!!!: No Music
+042c02a4 00000001
+*
 *
 $Important!!!: Widescreen
 040183EC 38600001
@@ -174,4 +175,3 @@ $Recommended: Increased Taunting Capabilities
 $Recommended: Instant Text Display
 $Recommended: Increased Coin Gain/Loss Speed
 $Recommended: Show Player Number of Who Paused
-$Recommended: Widescreen
